[package]
name = "sec-api-sdk-rust"
version = "1.0.3"
edition = "2021"
description = "Async Rust client for SEC API filings and issuer data"
license = "MIT"
readme = "README.md"
homepage = "https://secapi.ai"
documentation = "https://docs.secapi.ai/rust-sdk"
repository = "https://github.com/secapi-ai/secapi-rust"
keywords = ["sec", "edgar", "filings", "financial-data", "sdk"]

[dependencies]
httpdate = "1"
reqwest = { version = "0.13", features = ["json", "query", "rustls"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
urlencoding = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
